src/MatJv1Parser.java
// Generated from /home/dimonium-239/Study/6Sem/TKiK/MatJv1/MatJv1.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MatJv1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NL=1, BLOCKCOMMENT=2, COMMENT=3, WS=4, BREAK=5, CONTINUE=6, ELSE=7, ELIF=8, 
		FOR=9, WHILE=10, FUNCTION=11, IF=12, RETURN=13, EQUALS=14, GREATER_THAN_OR_EQUAL=15, 
		LESS_THAN_OR_EQUAL=16, AND=17, OR=18, NOT_EQUAL=19, ASSIGN=20, COLON=21, 
		GREATER_THAN=22, DIVIDE=23, PERCENT=24, LESS_THAN=25, MINUS=26, NOT=27, 
		PLUS=28, POWER=29, TIMES=30, TRANSPOSE=31, ROTATE=32, INCREMET=33, DECREMENT=34, 
		AT=35, COMMA=36, DOT=37, SEMI_COLON=38, LEFT_BRACE=39, LEFT_PARENTHESIS=40, 
		LEFT_SQUARE_BRACKET=41, RIGHT_BRACE=42, RIGHT_PARENTHESIS=43, RIGHT_SQUARE_BRACKET=44, 
		SHOW=45, ONES=46, ZEROS=47, EYE=48, IN=49, RANGE=50, BOOL_VAL=51, VAR_NAME=52, 
		INT_VAL=53, FLOAT_VAL=54, STRING_VAL=55;
	public static final int
		RULE_prog = 0, RULE_constructions = 1, RULE_statements = 2, RULE_numerical_exp = 3, 
		RULE_boolean_exp = 4, RULE_arithmetic_statement = 5, RULE_comparison_statement = 6, 
		RULE_logical_statement = 7, RULE_assignation = 8, RULE_def_func = 9, RULE_func_call = 10, 
		RULE_if_construction = 11, RULE_else_construction = 12, RULE_for_construction = 13, 
		RULE_while_construction = 14, RULE_function_params = 15, RULE_function_returns = 16, 
		RULE_matrix_func = 17, RULE_range_construction = 18, RULE_show_construction = 19, 
		RULE_ones_statement = 20, RULE_zeros_statement = 21, RULE_eye_statement = 22, 
		RULE_matrix = 23, RULE_matrix_index = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "constructions", "statements", "numerical_exp", "boolean_exp", 
			"arithmetic_statement", "comparison_statement", "logical_statement", 
			"assignation", "def_func", "func_call", "if_construction", "else_construction", 
			"for_construction", "while_construction", "function_params", "function_returns", 
			"matrix_func", "range_construction", "show_construction", "ones_statement", 
			"zeros_statement", "eye_statement", "matrix", "matrix_index"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'break'", "'continue'", "'else'", "'elif'", 
			"'for'", "'while'", "'func'", "'if'", "'return'", "'=='", "'>='", "'<='", 
			"'&&'", "'||'", "'~='", "'='", "':'", "'>'", "'/'", "'%'", "'<'", "'-'", 
			"'~'", "'+'", "'^'", "'*'", null, "'''", "'++'", "'--'", "'@'", "','", 
			"'.'", "';'", "'{'", "'('", "'['", "'}'", "')'", "']'", "'show'", "'ones'", 
			"'zeros'", "'eye'", "'in'", "'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NL", "BLOCKCOMMENT", "COMMENT", "WS", "BREAK", "CONTINUE", "ELSE", 
			"ELIF", "FOR", "WHILE", "FUNCTION", "IF", "RETURN", "EQUALS", "GREATER_THAN_OR_EQUAL", 
			"LESS_THAN_OR_EQUAL", "AND", "OR", "NOT_EQUAL", "ASSIGN", "COLON", "GREATER_THAN", 
			"DIVIDE", "PERCENT", "LESS_THAN", "MINUS", "NOT", "PLUS", "POWER", "TIMES", 
			"TRANSPOSE", "ROTATE", "INCREMET", "DECREMENT", "AT", "COMMA", "DOT", 
			"SEMI_COLON", "LEFT_BRACE", "LEFT_PARENTHESIS", "LEFT_SQUARE_BRACKET", 
			"RIGHT_BRACE", "RIGHT_PARENTHESIS", "RIGHT_SQUARE_BRACKET", "SHOW", "ONES", 
			"ZEROS", "EYE", "IN", "RANGE", "BOOL_VAL", "VAR_NAME", "INT_VAL", "FLOAT_VAL", 
			"STRING_VAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MatJv1.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MatJv1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<ConstructionsContext> constructions() {
			return getRuleContexts(ConstructionsContext.class);
		}
		public ConstructionsContext constructions(int i) {
			return getRuleContext(ConstructionsContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MatJv1Visitor ) return ((MatJv1Visitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BREAK) | (1L << CONTINUE) | (1L << FOR) | (1L << WHILE) | (1L << FUNCTION) | (1L << IF) | (1L << RETURN) | (1L << MINUS) | (1L << NOT) | (1L << PLUS) | (1L << LEFT_PARENTHESIS) | (1L << LEFT_SQUARE_BRACKET) | (1L << SHOW) | (1L << ONES) | (1L << ZEROS) | (1L << EYE) | (1L << BOOL_VAL) | (1L << VAR_NAME) | (1L << INT_VAL) | (1L << FLOAT_VAL) | (1L << STRING_VAL))) != 0)) {
				{
				{
				setState(50);
				constructions();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructionsContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public For_constructionContext for_construction() {
			return getRuleContext(For_constructionContext.class,0);
		}
		public While_constructionContext while_construction() {
			return getRuleContext(While_constructionContext.class,0);
		}
		public Show_constructionContext show_construction() {
			return getRuleContext(Show_constructionContext.class,0);
		}
		public AssignationContext assignation() {
			return getRuleContext(AssignationContext.class,0);
		}
		public If_constructionContext if_construction() {
			return getRuleContext(If_constructionContext.class,0);
		}
		public Def_funcContext def_func() {
			return getRuleContext(Def_funcContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(MatJv1Parser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(MatJv1Parser.CONTINUE, 0); }
		public TerminalNode RETURN() { return getToken(MatJv1Parser.RETURN, 0); }
		public ConstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).enterConstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).exitConstructions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MatJv1Visitor ) return ((MatJv1Visitor<? extends T>)visitor).visitConstructions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructionsContext constructions() throws RecognitionException {
		ConstructionsContext _localctx = new ConstructionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_constructions);
		try {
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				statements();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				for_construction();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				while_construction();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				show_construction();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				assignation();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(61);
				if_construction();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(62);
				def_func();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(63);
				match(BREAK);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(64);
				match(CONTINUE);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(65);
				match(RETURN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public MatrixContext matrix() {
			return getRuleContext(MatrixContext.class,0);
		}
		public Matrix_indexContext matrix_index() {
			return getRuleContext(Matrix_indexContext.class,0);
		}
		public Matrix_funcContext matrix_func() {
			return getRuleContext(Matrix_funcContext.class,0);
		}
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public Comparison_statementContext comparison_statement() {
			return getRuleContext(Comparison_statementContext.class,0);
		}
		public Arithmetic_statementContext arithmetic_statement() {
			return getRuleContext(Arithmetic_statementContext.class,0);
		}
		public Logical_statementContext logical_statement() {
			return getRuleContext(Logical_statementContext.class,0);
		}
		public TerminalNode STRING_VAL() { return getToken(MatJv1Parser.STRING_VAL, 0); }
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MatJv1Visitor ) return ((MatJv1Visitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statements);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				matrix();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				matrix_index();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				matrix_func();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				func_call();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(72);
				comparison_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(73);
				arithmetic_statement(0);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(74);
				logical_statement(0);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(75);
				match(STRING_VAL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numerical_expContext extends ParserRuleContext {
		public TerminalNode LEFT_PARENTHESIS() { return getToken(MatJv1Parser.LEFT_PARENTHESIS, 0); }
		public Arithmetic_statementContext arithmetic_statement() {
			return getRuleContext(Arithmetic_statementContext.class,0);
		}
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(MatJv1Parser.RIGHT_PARENTHESIS, 0); }
		public TerminalNode PLUS() { return getToken(MatJv1Parser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(MatJv1Parser.MINUS, 0); }
		public Matrix_indexContext matrix_index() {
			return getRuleContext(Matrix_indexContext.class,0);
		}
		public TerminalNode VAR_NAME() { return getToken(MatJv1Parser.VAR_NAME, 0); }
		public TerminalNode INT_VAL() { return getToken(MatJv1Parser.INT_VAL, 0); }
		public TerminalNode FLOAT_VAL() { return getToken(MatJv1Parser.FLOAT_VAL, 0); }
		public Numerical_expContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numerical_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).enterNumerical_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).exitNumerical_exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MatJv1Visitor ) return ((MatJv1Visitor<? extends T>)visitor).visitNumerical_exp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Numerical_expContext numerical_exp() throws RecognitionException {
		Numerical_expContext _localctx = new Numerical_expContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numerical_exp);
		int _la;
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MINUS || _la==PLUS) {
					{
					setState(78);
					_la = _input.LA(1);
					if ( !(_la==MINUS || _la==PLUS) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(81);
				match(LEFT_PARENTHESIS);
				setState(82);
				arithmetic_statement(0);
				setState(83);
				match(RIGHT_PARENTHESIS);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				matrix_index();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MINUS || _la==PLUS) {
					{
					setState(86);
					_la = _input.LA(1);
					if ( !(_la==MINUS || _la==PLUS) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(89);
				match(VAR_NAME);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MINUS || _la==PLUS) {
					{
					setState(90);
					_la = _input.LA(1);
					if ( !(_la==MINUS || _la==PLUS) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(93);
				match(INT_VAL);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MINUS || _la==PLUS) {
					{
					setState(94);
					_la = _input.LA(1);
					if ( !(_la==MINUS || _la==PLUS) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(97);
				match(FLOAT_VAL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Boolean_expContext extends ParserRuleContext {
		public TerminalNode LEFT_PARENTHESIS() { return getToken(MatJv1Parser.LEFT_PARENTHESIS, 0); }
		public Logical_statementContext logical_statement() {
			return getRuleContext(Logical_statementContext.class,0);
		}
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(MatJv1Parser.RIGHT_PARENTHESIS, 0); }
		public TerminalNode NOT() { return getToken(MatJv1Parser.NOT, 0); }
		public Comparison_statementContext comparison_statement() {
			return getRuleContext(Comparison_statementContext.class,0);
		}
		public TerminalNode BOOL_VAL() { return getToken(MatJv1Parser.BOOL_VAL, 0); }
		public TerminalNode VAR_NAME() { return getToken(MatJv1Parser.VAR_NAME, 0); }
		public Boolean_expContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).enterBoolean_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).exitBoolean_exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MatJv1Visitor ) return ((MatJv1Visitor<? extends T>)visitor).visitBoolean_exp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Boolean_expContext boolean_exp() throws RecognitionException {
		Boolean_expContext _localctx = new Boolean_expContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_boolean_exp);
		int _la;
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(100);
					match(NOT);
					}
				}

				setState(103);
				match(LEFT_PARENTHESIS);
				setState(104);
				logical_statement(0);
				setState(105);
				match(RIGHT_PARENTHESIS);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(107);
					match(NOT);
					}
				}

				setState(113);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(110);
					comparison_statement();
					}
					break;
				case 2:
					{
					setState(111);
					match(BOOL_VAL);
					}
					break;
				case 3:
					{
					setState(112);
					match(VAR_NAME);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arithmetic_statementContext extends ParserRuleContext {
		public Arithmetic_statementContext left;
		public Token op;
		public Arithmetic_statementContext right;
		public Numerical_expContext numerical_exp() {
			return getRuleContext(Numerical_expContext.class,0);
		}
		public TerminalNode INCREMET() { return getToken(MatJv1Parser.INCREMET, 0); }
		public TerminalNode DECREMENT() { return getToken(MatJv1Parser.DECREMENT, 0); }
		public List<Arithmetic_statementContext> arithmetic_statement() {
			return getRuleContexts(Arithmetic_statementContext.class);
		}
		public Arithmetic_statementContext arithmetic_statement(int i) {
			return getRuleContext(Arithmetic_statementContext.class,i);
		}
		public TerminalNode TIMES() { return getToken(MatJv1Parser.TIMES, 0); }
		public TerminalNode DIVIDE() { return getToken(MatJv1Parser.DIVIDE, 0); }
		public TerminalNode PERCENT() { return getToken(MatJv1Parser.PERCENT, 0); }
		public TerminalNode POWER() { return getToken(MatJv1Parser.POWER, 0); }
		public TerminalNode PLUS() { return getToken(MatJv1Parser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(MatJv1Parser.MINUS, 0); }
		public Arithmetic_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).enterArithmetic_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatJv1Listener ) ((MatJv1Listener)listener).exitArithmetic_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MatJv1Visitor ) return ((MatJv1Visitor<? extends T>)visitor).visitArithmetic_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arithmetic_statementContext arithmetic_statement() throws RecognitionException {
		return arithmetic_statement(0);
	}
